--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <div class="row callout">
         
         <div class="span4">   
-        <h3>What's New</h3>
-<p>Using HTML5 is very easy.    Everything you know about HTML still applies.   Just <a href="/~jperetz/fall2012/tools/html5/">read this HTML5 primer</a> and start using the simpler DOC declaration in your webpages.</p>
-<p>Read this lesson about <a href="lessons/conditionals.html">loop and conditional Javascript statements</a>.</p>
-<p>Get started on <a href="projects/programming/index.html">Project 1: Javascript Programming with an HTML5 Grid</a>.  Due date is September 6.</p>
+        <h3 class="lead">What's New</h3>
+<p class="lead">Using HTML5 is very easy.    Everything you know about HTML still applies.   Just <a href="/~jperetz/fall2012/tools/html5/">read this HTML5 primer</a> and start using the simpler DOC declaration in your webpages.</p>
+<p class="lead">Read this lesson about <a href="lessons/conditionals.html">loop and conditional Javascript statements</a>.</p>
+<p class="lead">Get started on <a href="projects/programming/index.html">Project 1: Javascript Programming with an HTML5 Grid</a>.  Due date is September 6.</p>
         </div>
 <div class="span7 well"> 
 <h5>Sign up for a <a class="label label-success" href="http://student.santarosa.edu/"> free student.santarosa.edu </a> webserver account</h5> 
