--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -43,6 +43,7 @@
 </div>
 
 <div class="span6">
+<h3>The Grid</h3>
 <div id="grid">
 <div class="row">
 <div class="span1">
@@ -261,7 +262,7 @@ for (x in spans) {
 </pre>
 </code>	
 
-<li>OK, the rest is up to you.  Create your own grid and Javascript code to explore how this works.  Create at least three additional Javascript processes that expand on this concept.     List your work on the webpage, with a short paragraph of any issues you needed to resolve, how you resolved them, and how much time you spent on this project. 
+<li>OK, the rest is up to you.  Create your own grid and Javascript code to explore how this works.  Create at least three additional Javascript processes that expand on this concept.     List your work on the webpage, with a short paragraph of any issues you needed to resolve, how you resolved them, and how much time you spent on this project.  Project is due September 6, Thursday following the Labor Day weekend.
 </li>
 
 
