Removed type attribute from script tags.

--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -175,9 +175,9 @@
 &lt;link href=bootstrap/css/bootstrap.css rel=stylesheet&gt;
 &lt;/head&gt;
 ...
-&lt;script type="text/javascript" src="bootstrap/js/jquery.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="bootstrap/js/bootstrap.js"&gt;&lt;/script&gt;
-&lt;script type="text/javascript" src="programming.js"&gt;&lt;/script&gt;
+&lt;script src="bootstrap/js/jquery.js"&gt;&lt;/script&gt;
+&lt;script src="bootstrap/js/bootstrap.js"&gt;&lt;/script&gt;
+&lt;script src="programming.js"&gt;&lt;/script&gt;
 &lt;/body&gt;
 </pre>
 </code>
