Typos in code example.

--- a/lessons/conditionals.html
+++ b/lessons/conditionals.html
@@ -66,10 +66,10 @@ switch (day)
   case "Sunday":
    sleep();
    break;
-  case "Monday";
+  case "Monday":
    work();
    break;
-  case "Tuesday:
+  case "Tuesday":
    play();
    break;
    ...
