--- a/lessons/conditionals.html
+++ b/lessons/conditionals.html
@@ -49,7 +49,7 @@ var y = (degree != 361) ? rotate(); : null;
                        
                 <code>
                         <pre class="prettyprint linenums">        
-var y = (degree != 361) ? rotate(); : null; 
+var y = (degree != 361) ? rotate() : null; 
 </pre>
                         </code> 
                          </dl>
