--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -153,8 +153,8 @@
 <div class="row">
 <div class="span12">
 
-<ol>
-<li>First, create a basic HTML5 webpage document
+
+<p>1. First, create a basic HTML5 webpage document</p>
   <code>
                         <pre class="prettyprint linenums">
 &lt;!DOCTYPE HTML&gt;
@@ -168,8 +168,8 @@
 &lt;/html&gt;
 </pre>
 </code>
-</li>
-<li>Download the <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap library</a>.     Link the bootstrap stylesheet in the head of your document and jQuery (using Google's CDN) and the Bootstrap Javascript library in script tags before the ending of your document.  Create a new Javascript file named programming.js and link that to your page with a script tag below bootstrap.js.
+
+<p>2. Download the <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap library</a>.     Link the bootstrap stylesheet in the head of your document and jQuery (using Google's CDN) and the Bootstrap Javascript library in script tags before the ending of your document.  Create a new Javascript file named programming.js and link that to your page with a script tag below bootstrap.js.</p>
   This is where we will do our programming.<code>
                         <pre class="prettyprint linenums">
 &lt;link href=bootstrap/css/bootstrap.css rel=stylesheet&gt;
@@ -181,11 +181,12 @@
 &lt;/body&gt;
 </pre>
 </code>
-</li>
-<li>
-Twitter Bootstrap has a built-in HTML/CSS grid system which is very easy to use.    We are going to create a simple grid as a Javascript programming playground.  You can use  classes that are defined by Bootstrap such as 'row' and 'span(number)'. First create a div with id of <strong>grid</strong> and then rows with spans that add up to no more than 12. For this project it's  OK to use the class &quot;span1&quot; for your blocks. Create at least a few rows to work with - you can copy and paste the HTML from here. </li>
+
+<p>
+3. Twitter Bootstrap has a built-in HTML/CSS grid system which is very easy to use.    We are going to create a simple grid as a Javascript programming playground.  You can use  classes that are defined by Bootstrap such as 'row' and 'span(number)'. First create a div with id of <strong>grid</strong> and then rows with spans that add up to no more than 12. For this project it's  OK to use the class &quot;span1&quot; for your blocks. Create at least a few rows to work with - you can copy and paste the HTML from here. </p>
 <code>
 <pre class="prettyprint linenums">
+&lt;div id="container"&gt;
 &lt;div id="grid"&gt;
 &lt;div class="row"&gt;
 &lt;div class="span1"&gt;
@@ -197,11 +198,12 @@ Twitter Bootstrap has a built-in HTML/CSS grid system which is very easy to use.
 &lt;/div&gt;
 ...
 &lt;/div&gt;
+&lt;/div&gt;
 </pre>
 </code>
 
-<li>
-Now we can start having some fun with Javascript!    First we will use a few functions that are build into web browsers for 'traversing' web documents.   We'll learn more about the Document Object Model in a few weeks. For now, it's important for you just to know that these functions return <em>object references</em> to the page elements that meet the criteria we ask for. </li>
+<p>
+4. Now we can start having some fun with Javascript!    First we will use a few functions that are build into web browsers for 'traversing' web documents.   We'll learn more about the Document Object Model in a few weeks. For now, it's important for you just to know that these functions return <em>object references</em> to the page elements that meet the criteria we ask for. </p>
 <code>
 <pre class="prettyprint linenums">
 // access the grid element - returns a single object
@@ -212,8 +214,8 @@ var rows = grid.getElementsByClassName("row");
 </pre>
 </code>
 
-<li>First, let's add content to each of the grid cells.  Assigning a value to the  innerHTML property of a webpage element updates its content.  The value would typically be a string and can contain content and markup. Using a FOR statement loop allows us to 'iterate' over each element in the set of elements contained in a variable.
-</li>
+<p>5. First, let's add content to each of the grid cells.  Assigning a value to the  innerHTML property of a webpage element updates its content.  The value would typically be a string and can contain content and markup. Using a FOR statement loop allows us to 'iterate' over each element in the set of elements contained in a variable.
+</p>
 <code>
 <pre class="prettyprint linenums">
 // the FOR statement allows us to iterate over each element of an array or DOM collection.
@@ -223,8 +225,8 @@ for (var ii = 0, len = spans.length; ii &lt; len; ii++) {
 </pre>
 </code>
 
-<li>Next we'll use a DO ... WHILE loop statement to change the properties of each of the paragraphs to align them properly.   We can create a new set using getElementsByTagName().   The WHILE loop statements have slightly diferrent syntax than the FOR loop. 
-NOTE that this statement also requires you to take on a bit more  responsibility.  It is easy to create an INFINITE LOOP and freeze your browser session and possibly your operating system if you forget to increment the counter!</li>
+<p>6. Next we'll use a DO ... WHILE loop statement to change the properties of each of the paragraphs to align them properly.   We can create a new set using getElementsByTagName().   The WHILE loop statements have slightly diferrent syntax than the FOR loop. 
+NOTE that this statement also requires you to take on a bit more  responsibility.  It is easy to create an INFINITE LOOP and freeze your browser session and possibly your operating system if you forget to increment the counter!</p>
 <code>
 </code><code>
 <pre class="prettyprint linenums">
@@ -241,8 +243,8 @@ do {
 </pre>
 </code>
 
-<li>We can get interesting features by adding an IF statement within our iteration loop.   In this example we are using a MODULUS operator to test for odd or even values, enabling us stripe the rows or columns of our grid.   Notice how the IF statement doesn't have an effect unless we iterate the objects 'through' it, unlike CSS, where all we need to do is declare a rule, and all members are effected. 
-</li>
+<p>7. We can get interesting features by adding an IF statement within our iteration loop.   In this example we are using a MODULUS operator to test for odd or even values, enabling us stripe the rows or columns of our grid.   Notice how the IF statement doesn't have an effect unless we iterate the objects 'through' it, unlike CSS, where all we need to do is declare a rule, and all members are effected. 
+</p>
 <code>
 <pre class="prettyprint linenums">
 for (var x = 0, len = rows.length; x < len; x++) {
@@ -252,7 +254,7 @@ for (var x = 0, len = rows.length; x < len; x++) {
 }
 </pre>
 </code>
-<li>There are many element manipulation techniques, we'll learn some more in a few weeks, in the meantime, you can see how easy it is to add a class to specific elements using the setAttribute( ) function.</li>
+<li>8. There are many element manipulation techniques, we'll learn some more in a few weeks, in the meantime, you can see how easy it is to add a class to specific elements using the setAttribute( ) function.</li>
 <code>
 <pre class="prettyprint linenums">
 for (x = 0, len = spans.length; x < len; x++) {
@@ -263,11 +265,11 @@ for (x = 0, len = spans.length; x < len; x++) {
 </pre>
 </code>	
 
-<li>OK, the rest is up to you.  Create your own grid and Javascript code to explore how this works.  Create at least three additional Javascript processes that expand on this concept.     List your work on the webpage, with a short paragraph of any issues you needed to resolve, how you resolved them, and how much time you spent on this project.  Project is due September 6, Thursday following the Labor Day weekend.
-</li>
+<p>9. OK, the rest is up to you.  Create your own grid and Javascript code to explore how this works.  Create at least three additional Javascript processes that expand on this concept.     List your work on the webpage, with a short paragraph of any issues you needed to resolve, how you resolved them, and how much time you spent on this project.  Project is due September 6, Thursday following the Labor Day weekend.
+</p>
 
 
-</ol>
+
 </div>
 
 
@@ -298,6 +300,12 @@ for (x = 0, len = spans.length; x < len; x++) {
 <script type="text/javascript" src="../../bootstrap/js/jquery.js"></script>
 <script type="text/javascript" src="../../bootstrap/js/bootstrap.js"></script>
   <script type="text/javascript"  src="../../bootstrap/js/fall2012.js"></script>
+   <script src=../../lib/prettify/prettify.js></script>
+   <script>
+            $(function() {
+                prettyPrint();
+            });
+        </script>
 <script type="text/javascript" src="programming.js"></script>
 </body>
 </html>
