started data type lesson

--- a/lessons/conditionals.html
+++ b/lessons/conditionals.html
@@ -42,7 +42,7 @@ if (degree != 361)
    rotate();
   }
 
-var y = (degree != 361) ? rotate(); : null; 
+var y = (degree != 361) ? rotate() : null; 
 </pre>
                         </code>
                        <dt>Ternary</dt> <dd>A similar technique to IF statements. Based on the truth of the test expression, a variable takes a different value or code path.  It is good practice to have functions return values as we'll learn soon</dd>
