Added video link to fundamentals (old) lesson.

--- a/lessons/fundamentals.html
+++ b/lessons/fundamentals.html
@@ -112,7 +112,18 @@ Javascript uses sytax from C and naming conventions from <strong>Java</strong>. 
                             </li>
                             
                         </ul>
-                       
+                        <h3>Videos</h3>
+                        <ul>
+                            <li>
+                                <a 
+                                    href=http://www.youtube.com/watch?v=v2ifWcnQs6M
+                                    title="This is long and covers topics that we will be reviewing over the next few weeks."
+                                >
+                                    Douglas Crockford: The JavaScript Programming Language
+                                </a>
+                                <small>* Recommended for Programmers</small>
+                            </li>
+                        </ul>
                     </section>
                 </section>
             </div>
