Added a reference to the Math object in the Calculator assignment section.

--- a/projects/calculator/index.html
+++ b/projects/calculator/index.html
@@ -648,7 +648,8 @@ enterBtn.addEventListener('click', computeAnswer, false);
                         <li>
                             Add an exponent operator to the calculator, where 
                             <code>operand1</code> will serve as the base and 
-                            <code>operand2</code> as the exponent.
+                            <code>operand2</code> as the exponent.  Use the built-in
+                            Math object to perform the calculation.
                         </li>
                         <li>
                             Add a minus sign key to the calculator, which will
