--- a/projects/programming/index.html
+++ b/projects/programming/index.html
@@ -175,7 +175,7 @@
 &lt;link href=bootstrap/css/bootstrap.css rel=stylesheet&gt;
 &lt;/head&gt;
 ...
-&lt;script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"&gt;&lt;/script&gt;
+&lt;script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"&gt;&lt;/script&gt;
 &lt;script src="bootstrap/js/bootstrap.js"&gt;&lt;/script&gt;
 &lt;script src="programming.js"&gt;&lt;/script&gt;
 &lt;/body&gt;
