--- a/projects/naptime/index.html
+++ b/projects/naptime/index.html
@@ -25,9 +25,9 @@ input#toggle , #wakeup {
 <p>&nbsp;</p>
 <h4>What you will learn in this project</h4>
 <ul>
-<li>Working with the Javascript Date( ) object</li>
-<li>Working with the Javascript Audio( )object</li>
-<li>Introduction to working with functions</li>
+<li>Working with the <a href="http://www.w3schools.com/jsref/jsref_obj_date.asp">Javascript Date( ) object</a></li>
+<li>Working with the <a href="http://www.w3schools.com/html5/html5_ref_av_dom.asp">Javascript Audio( )object</a></li>
+<li>Introduction to <a href="../../lessons/functions.html">working with functions</a></li>
 <li>Introduction to working with events </li>
 </ul>
 </div>
